@@ -31,7 +31,7 @@ enum
     AOP_REG, AOP_DIR,
     AOP_DPTR, AOP_R0, AOP_R1,
     AOP_STK, AOP_IMMD, AOP_STR,
-    AOP_CRY, AOP_ACC
+    AOP_CRY, AOP_ACC, AOP_DUMMY
   };
 
 /* type asmop : a homogenised type for 
@@ -53,6 +53,7 @@ typedef struct asmop
        AOP_CRY    -  carry contains the value of this
        AOP_STR    -  array of strings
        AOP_ACC    -  result is in the acc:b pair
+       AOP_DUMMY  -  read as 0, discard writes
     */
     short coff;			/* current offset */
     short size;			/* total size */
